@@ -4,3 +4,4 @@ Build
 MYMETA.*
 .DS_Store
 *.bak
+test
