@@ -1,1 +1,2 @@
+2014-05-13  version 1.065 - format incoming doc_num(ber) to decimal with nine digits
 2013-04-12  reference to Catmandu::AlephX::Op::Renew resolved
